--- a/Day-01/01-SalaryCalculator/01-index.html
+++ b/Day-01/01-SalaryCalculator/01-index.html
@@ -18,12 +18,34 @@
 			font-size: 22pt;
 		}
 	</style>
+	<script src="jquery-3.2.0.js"></script>
+	<script>
+		String.prototype.toInt = function(){
+			return parseInt(this, 10);
+		};
+		$(document).ready(function(){
+			$("#btnCalculate").click(function(){
+				var basic = $("#txtBasic").val().toInt(),
+					hra = $("#txtHra").val().toInt(),
+					da = $("#txtDa").val().toInt(),
+					tax = $("#rangeTax").val().toInt();
+
+				var gross = basic + hra + da;
+				var net = gross * ((100-tax)/100);
+				$("#divResult").html(net);
+			});
+
+			$("#rangeTax").change(function(){
+				$("#spanTax").html(this.value);
+			});
+		});
+	</script>
 </head>
 <body>
 	<h1>Salary Calculator</h1>
 	<hr>
 	<div class="content">
-		<div class="field"><label for="">Basic :</label><input type="text" name="" id="txtBasic"></div>
+		<div class="field"><label for="">Basic :</label><input type="number" name="" id="txtBasic"></div>
 		<div class="field"><label for="">HRA :</label><input type="text" name="" id="txtHra"></div>
 		<div class="field"><label for="">DA :</label><input type="text" name="" id="txtDa"></div>
 		<div class="field">
