--- a/Day-03/index.html
+++ b/Day-03/index.html
@@ -42,35 +42,75 @@
 	<script src="babel.min.js"></script>
 	<script src="react.js"></script>
 	<script src="react-dom.js"></script>
-	<script src="EventEmitter.js"></script>
-
 	
+
+	<script type="text/babel">
+
+		class BugsCollectionModel extends EventEmitter {
+			constructor(){
+				this.__listenerFns = [];
+				this.list = [
+					'Server communication failure',
+					'Data validation error',
+					'User actions not recognized'
+				];
+			}
+
+			onChange(listenerFn){
+				if (typeof listenerFn !== 'function')
+					throw new Error('Subscription should be a function');
+				this.__listenerFns.push(listenerFn);
+			}
+
+			emit(){
+				this.__listenerFns.forEach(listenerFn => listenerFn());
+			}
+			
+		}
+
+		class BugsCollection extends React.Component{
+			render(){
+				var bugs = this.props.model.list;
+				var bugItems = bugs.map(bug => (
+					<li>
+						<span className="bugname">{bug}</span>
+						<div className="datetime">[Created At]</div>
+					</li>
+				));
+				return (
+					<div>
+						<section className="stats">
+							<span className="closed">2</span>
+							<span> / </span>
+							<span>5</span>
+						</section>
+						<section className="edit">
+							<label htmlFor="">Bug Name :</label>
+							<input type="text" name="" id="" />
+							<input type="button" value="Add New" id="btnAdd" />
+						</section>
+						<section className="list">
+							<ol>
+								{bugItems}
+							</ol>
+							<input type="button" value="Remove Closed" />
+						</section>
+					</div>
+				)
+			}
+		}
+
+		var bugsCollectionModel = new BugsCollectionModel();
+		function renderApp(){
+			ReactDOM.render(<BugsCollection model={bugsCollectionModel}></BugsCollection>, document.getElementById("content"));
+		}
+		renderApp();
+	</script>
 </head>
 <body>
 	<h1>Bug Tracker</h1>
 	<hr>
-	<section class="stats">
-		<span class="closed">2</span>
-		<span> / </span>
-		<span>5</span>
-	</section>
-	<section class="edit">
-		<label for="">Bug Name :</label>
-		<input type="text" name="" id="">
-		<input type="button" value="Add New" id="btnAdd">
-	</section>
-	<section class="list">
-		<ol>
-			<li>
-				<span class="bugname">Bug - 1</span>
-				<div class="datetime">[Created At]</div>
-			</li>
-			<li>
-				<span class="bugname closed">Bug - 2</span>
-				<div class="datetime">[Created At]</div>
-			</li>
-		</ol>
-		<input type="button" value="Remove Closed">
-	</section>
+	<div id="content">
+	</div>
 </body>
 </html>
