--- a/Day-03/index.html
+++ b/Day-03/index.html
@@ -46,13 +46,13 @@
 
 	<script type="text/babel">
 
-		class BugsCollectionModel extends EventEmitter {
+		class BugsCollectionModel{
 			constructor(){
 				this.__listenerFns = [];
 				this.list = [
-					'Server communication failure',
-					'Data validation error',
-					'User actions not recognized'
+					{name : 'Server communication failure', isClosed : false, createdAt :  new Date()},
+					{name : 'Data validation error', isClosed : false, createdAt :  new Date()},
+					{name : 'User actions not recognized', isClosed : false, createdAt :  new Date()},
 				];
 			}
 
@@ -65,35 +65,74 @@
 			emit(){
 				this.__listenerFns.forEach(listenerFn => listenerFn());
 			}
+
+			add(bugName){
+				var newBug = {
+					name : bugName,
+					isClosed : false,
+					createdAt : new Date()
+				};
+				this.list.push(newBug);
+				this.emit();
+			}
 			
+			toggle(bug){
+				bug.isClosed = !bug.isClosed;
+				this.emit();
+			}
+
+			getClosedCount(){
+				return this.list.reduce((result, bug) => bug.isClosed ? ++result : result, 0);
+			}
+
+			removeClosed(){
+				this.list = this.list.filter(bug => !bug.isClosed);
+				this.emit();
+			}
 		}
 
 		class BugsCollection extends React.Component{
+			toggle(bug){
+				this.props.model.toggle(bug);
+			}
+			onAddNewClick(){
+				var bugName = this.refs.txtBugName.value;
+				this.props.model.add(bugName);
+			}
+			onRemoveClosedClick(){
+				this.props.model.removeClosed();
+			}
 			render(){
 				var bugs = this.props.model.list;
-				var bugItems = bugs.map(bug => (
-					<li>
-						<span className="bugname">{bug}</span>
-						<div className="datetime">[Created At]</div>
-					</li>
-				));
+				var closedCount = this.props.model.getClosedCount();
+				var self = this;
+				var bugItems = bugs.map(bug => {
+						var bugClass = bug.isClosed ? 'bugname closed' : 'bugname';
+						return (
+							<li>
+								<span className={bugClass} onClick={self.toggle.bind(self, bug)}>{bug.name}</span>
+								<div><i>{bug.isClosed.toString()}</i></div>
+								<div className="datetime">{bug.createdAt.toString()}</div>
+							</li>
+						);
+				});
 				return (
 					<div>
 						<section className="stats">
-							<span className="closed">2</span>
+							<span className="closed">{closedCount}</span>
 							<span> / </span>
-							<span>5</span>
+							<span>{bugs.length}</span>
 						</section>
 						<section className="edit">
 							<label htmlFor="">Bug Name :</label>
-							<input type="text" name="" id="" />
-							<input type="button" value="Add New" id="btnAdd" />
+							<input type="text" ref="txtBugName" />
+							<input type="button" value="Add New" onClick={this.onAddNewClick.bind(this)} />
 						</section>
 						<section className="list">
 							<ol>
 								{bugItems}
 							</ol>
-							<input type="button" value="Remove Closed" />
+							<input type="button" value="Remove Closed" onClick={this.onRemoveClosedClick.bind(this)}/>
 						</section>
 					</div>
 				)
@@ -101,6 +140,8 @@
 		}
 
 		var bugsCollectionModel = new BugsCollectionModel();
+		bugsCollectionModel.onChange(renderApp);
+
 		function renderApp(){
 			ReactDOM.render(<BugsCollection model={bugsCollectionModel}></BugsCollection>, document.getElementById("content"));
 		}
