--- a/Day-04/01-index.html
+++ b/Day-04/01-index.html
@@ -148,18 +148,17 @@
 		}
 
 		class BugList extends React.Component{
-			onRemoveClosedClick(){
-				this.props.onRemoveClosed();
-			}
 			render(){
-				var bugs = this.props.bugs;
-				var bugItems = bugs.map(bug => (<BugItem bug={bug} onToggle={this.props.onToggle}></BugItem>));
+				
+				var bugItems = this.props.bugs.map(bug => 
+					(<BugItem bug={bug} onToggle={this.props.onToggle}></BugItem>)
+				);
 				return(
 					<section className="list">
 						<ol>
 							{bugItems}
 						</ol>
-						<input type="button" value="Remove Closed" onClick={this.onRemoveClosedClick.bind(this)}/>
+						<input type="button" value="Remove Closed" onClick={this.props.onRemoveClosed}/>
 					</section>
 				);
 			}
