--- a/Day-04/05-Real-Redux-BugTracker.html
+++ b/Day-04/05-Real-Redux-BugTracker.html
@@ -7,7 +7,7 @@
 	<script src="babel.min.js"></script>
 	<script src="react.js"></script>
 	<script src="react-dom.js"></script>
-	<script src="Redux.js"></script>
+	<script src="real-redux.js"></script>
 	<script type="text/babel">
 		function bugsReducer(currentState = [], action){
 			switch(action.type){
