--- a/Day-04/01-index.html
+++ b/Day-04/01-index.html
@@ -3,42 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Bug Tracker</title>
-	<style>
-		body{
-			margin-left: 50px;
-		}
-		section{
-			margin-bottom: 10px;
-		}
-		.stats, .bugname{
-			font-size: 22pt;
-		}
-		.closed{
-			color : red;
-			text-decoration: line-through;
-			font-weight: bold;
-			font-style: italic;
-		}
-		ol{
-			width: 500px;
-			list-style: none;
-		}
-		li{
-			margin-bottom: 10px;
-			border : 1px solid gray;
-			background-color: #e7e7e7;
-			padding: 5px;
-			border-radius: 5px;
-		}
-		.datetime{
-			font-size: small;
-			font-style: italic;
-
-		}
-		.bugname{
-			cursor : pointer;
-		}
-	</style>
+	<link rel="stylesheet" href="style.css"/>
 	<script src="babel.min.js"></script>
 	<script src="react.js"></script>
 	<script src="react-dom.js"></script>
